--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.4.1
 certifi==2021.5.30
+cffi==1.14.6
+cryptography==3.4.8
 Django==3.2.6
 djangorestframework==3.12.4
 gunicorn==20.1.0
 mysql-connector-python==8.0.26
 mysqlclient==2.0.3
 protobuf==3.17.3
+pycparser==2.20
 PyJWT==2.1.0
 pytz==2021.1
 six==1.16.0
