--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,36 @@
 asgiref==3.4.1
+attrs==21.2.0
+awscli==1.20.46
 bcrypt==3.2.0
+boto3==1.18.46
+botocore==1.21.46
 certifi==2021.5.30
 cffi==1.14.6
+colorama==0.4.3
 cryptography==3.4.8
 Django==3.2.6
 djangorestframework==3.12.4
+docutils==0.15.2
 gunicorn==20.1.0
+iniconfig==1.1.1
+jmespath==0.10.0
 mysql-connector-python==8.0.26
 mysqlclient==2.0.3
+packaging==21.0
+pluggy==1.0.0
 protobuf==3.17.3
+py==1.10.0
+pyasn1==0.4.8
 pycparser==2.20
 PyJWT==2.1.0
+pyparsing==2.4.7
+pytest==6.2.5
+python-dateutil==2.8.2
 pytz==2021.1
+PyYAML==5.4.1
+rsa==4.7.2
+s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.7
