--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.14.6
 colorama==0.4.3
 cryptography==3.4.8
 Django==3.2.6
+django-cors-headers==3.10.0
 djangorestframework==3.12.4
 docutils==0.15.2
 gunicorn==20.1.0
@@ -17,6 +18,7 @@ jmespath==0.10.0
 mysql-connector-python==8.0.26
 mysqlclient==2.0.3
 packaging==21.0
+Pillow==8.4.0
 pluggy==1.0.0
 protobuf==3.17.3
 py==1.10.0
